fix gap and text

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     box-shadow: 5px 10px 38px #888888;
     border-radius: 7px;
     width: 320px;
-    background-color: #000000;
+    background-color: #5e4848;
     overflow:hidden;
 }
 
